Fixed movie card alignment issues, added hover state for add button, and added run time fieled.

--- a/src/app/movie-list/movie-list.component.css
+++ b/src/app/movie-list/movie-list.component.css
@@ -1,8 +1,4 @@
 .movieListContainer {
-    /* width: 540px; */
-    /* display: flex;
-    flex-direction: column;
-    align-items: center; */
     margin-left: 40px;
     margin-top: 100px;
     padding-left: 320px;
@@ -10,46 +6,66 @@
 
 .movieCard {
     display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 150px;
     margin-bottom: 10px;
     padding: 16px;
+
+    background-color: white;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+
     font-family: 'Noto Sans', sans-serif;
     color: #333333;
-    background-color: white;
 }
 
-.moviePoster {
-    margin-right: 28px;
-}
+/* .moviePoster {} */
 
 .movieInformation {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     width: 100%;
+    margin-left: 16px;
 }
 
 .titleAndYear {
     display: flex;
-    flex-direction: row;
     align-items: baseline;
 }
 
 .movieTitleText {
     font-size: 18px;
-    padding-right: 8px;
+    margin-right: 8px;
 }
 
 .yearText {
     font-size: 14px;
 }
 
-.addRemoveButton {
+.movieGenre {
+    font-size: 16px;
+    color: #666;
+}
+
+.movieRunTime {
+    font-size: 16px;
+    color: #666;
+}
+
+.addRemove-container {
     display: flex;
-    flex-direction: row;
     justify-content: flex-end;
-    padding-top: 13%;
+}
+
+.addRemove-button {
+    padding: 8px;
+    display: flex;
+    align-items: center;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.addRemove-button:hover {
+    background-color: #fea200;
 }
 
 .addOrRemoveText {
